[package]
name = "quack-gh"
version = "0.1.2"
edition = "2021"
description = "A super easy way to create new GitHub repos and link them to your local repo."
license-file = "LICENSE.txt"
readme = "README.md"
homepage = "https://github.com/cameronspears/quack"
repository = "https://github.com/cameronspears/quack"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "quack"
path = "src/main.rs"

[dependencies]
regex = "1.10.2"
log = "0.4.20"
env_logger = "0.10.0"

